# MyDownLoadUI

./: .project  MyCurl.c  MyCurl.h  MyDownloadUi.c  MyDownloadUi.glade  MyDownloadUi.glade~  MyDownloadUi.h  MySoupDl.c  MySoupDl.h  gresources.c  gresources.xml  makefile  makefile.init  meson.build  mycurl_demo.c  mysoupdl_demo.c
Debug/: MyCurl.d  MyDownloadUi.d  gresources.d  main.d  makefile  objects.mk  sources.mk  subdir.mk
Debug/buld/: subdir.mk
Debug/buld/MyCurl@sta/: subdir.mk
Debug/buld/MyDownloadUi@sta/: subdir.mk
Debug/buld/meson-private/: subdir.mk
Debug/buld/mycurl_demo@exe/: subdir.mk
